# xhec-mlops-2025-project

./: .dockerignore  .pre-commit-config.yaml  Dockerfile.app  README.md  prefect.yaml  pyproject.toml  pytest.ini
.github/workflows/: ci.yaml
notebooks/: eda.ipynb  modelling.ipynb
src/modelling/: config.py  deployment.py  main.py  predicting.py  prefect_flows.py  preprocessing.py  training.py  utils.py  workflows.py
src/web_service/: main.py  utils.py
src/web_service/lib/: models.py
tests/: conftest.py  test_config.py  test_predicting.py  test_preprocessing.py  test_training.py  test_utils.py  test_workflows.py
tests/integration/: test_training_integration.py
tests/unit/: test_config.py  test_deployment.py  test_main_comprehensive.py  test_main_execution.py  test_predicting.py  test_prefect_flows_simple.py  test_preprocessing_unit.py  test_training_main.py  test_training_unit.py  test_utils_unit.py  test_web_service.py  test_workflows_comprehensive.py
